// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attacking a transformed fighter > replays doge being punched mid-install identically 1`] = `
[
  "t100:178c13b7",
  "t200:e39aa97a",
  "t300:29473567",
  "t400:d69cc870",
  "t500:2b0bee6d",
  "t600:f0911106",
  "t700:e1b5ad4",
]
`;

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 505.5151,
  },
  "p2": {
    "hp": 82.9903,
    "state": "VICTORY",
    "x": 608.4667,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 1559,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:671bdb56",
  "t300:fc6e3130",
  "t450:94b5a7d2",
  "t600:76ab8129",
  "t750:9547e12f",
  "t900:291e6799",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "IDLE",
    "x": 445.2007,
  },
  "p2": {
    "hp": 100,
    "state": "WALK",
    "x": 738.75,
  },
  "phase": "fight",
  "round": 2,
  "roundWins": [
    0,
    1,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:da9888ef",
  "t240:a8c96969",
  "t360:902a08b3",
  "t480:8940fb3a",
  "t600:7f745ffa",
  "t720:53b73cdb",
  "t840:b1d25794",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:408b60b2",
  "t240:a8a6c0a7",
  "t360:fb971411",
  "t480:63561ea3",
  "t600:b670a576",
  "t720:8e74e5b",
  "t840:478ef03a",
  "t960:4b43a45c",
  "t1080:b7a8b5e8",
  "t1200:a5d36c0e",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 24.6531,
    "state": "DASH_BACK",
    "x": 1185,
  },
  "p2": {
    "hp": 63.6418,
    "state": "HEAVY_ATTACK",
    "x": 562.2456,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;

exports[`ultimate timelines > replays alien against salad identically 1`] = `
[
  "t150:6613f48",
  "t300:a4d694ae",
  "t450:af13a28d",
  "t600:7cabab1e",
  "t750:474e1c32",
  "t900:c54d32d5",
]
`;

exports[`ultimate timelines > replays alien against salad identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "IDLE",
    "x": 141.6667,
  },
  "p2": {
    "hp": 43.5372,
    "state": "DASH_FORWARD",
    "x": 362.9946,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays doge against sauce identically 1`] = `
[
  "t150:357cd67a",
  "t300:f2bb8355",
  "t450:1db6e86",
  "t600:88314b1d",
  "t750:d5b83f89",
  "t900:2d79d81",
]
`;

exports[`ultimate timelines > replays doge against sauce identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 170.7679,
  },
  "p2": {
    "hp": 60.1336,
    "state": "HITSTUN",
    "x": 269.6164,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays ok against wizard identically 1`] = `
[
  "t150:c5dfafa4",
  "t300:af9f0c80",
  "t450:2f34612f",
  "t600:956ce910",
  "t750:fec5ec4a",
  "t900:9e19ba8e",
]
`;

exports[`ultimate timelines > replays ok against wizard identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 97.3333,
  },
  "p2": {
    "hp": 67.7879,
    "state": "HITSTUN",
    "x": 183.3333,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays tempura against scared identically 1`] = `
[
  "t150:16d2b41a",
  "t300:e2cbc05d",
  "t450:f2881760",
  "t600:c254cd6a",
  "t750:95ae2fab",
  "t900:1e1cbd1c",
]
`;

exports[`ultimate timelines > replays tempura against scared identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "VICTORY",
    "x": 95,
  },
  "p2": {
    "hp": 0,
    "state": "KO",
    "x": 255.376,
  },
  "phase": "ending",
  "round": 1,
  "roundWins": [
    1,
    0,
  ],
  "tick": 900,
}
`;
